--- a/settings.ini
+++ b/settings.ini
@@ -38,8 +38,8 @@ status = 3
 user = FrLars21
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
+requirements = python-fasthtml
+# dev_requirements =
 # console_scripts =
-# conda_user = 
+# conda_user =
 # package_data =
